--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.109.0"}
-pytest = "^7.4.4"
 sqlalchemy = "^2.0.25"
 alembic = "^1.13.1"
 psycopg-binary = "^3.1.17"
@@ -24,7 +23,15 @@ cloudinary = "^1.38.0"
 pre-commit = "^3.6.0"
 black = "^24.1.1"
 sphinx = "^7.2.6"
+pytest = "^8.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
+testpaths = [
+    "tests",
+]
+pythonpath = "."
