--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pre-commit = "^3.6.0"
 black = "^24.1.1"
 sphinx = "^7.2.6"
 pytest = "^8.0.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
