--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-jose = "^3.3.0"
 fastapi-mail = "^1.4.1"
 fastapi-limiter = "^0.1.6"
 cloudinary = "^1.38.0"
+sqlalchemy-utils = "^0.41.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,6 +26,12 @@ black = "^24.1.1"
 sphinx = "^7.2.6"
 pytest = "^8.0.0"
 pytest-cov = "^4.1.0"
+
+
+[tool.poetry.group.test.dependencies]
+aiosqlite = "^0.19.0"
+pytest-asyncio = "^0.23.5"
+httpx = "^0.26.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -36,3 +43,4 @@ testpaths = [
     "tests",
 ]
 pythonpath = "."
+filterwarnings = "ignore::DeprecationWarning"
